<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:gravity="center">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity" android:gravity="center">
        <TextView
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:text="@string/enterValueWarning"
                android:id="@+id/result" app:fontFamily="@font/arvo"
                android:textColor="@android:color/holo_red_dark"
        />
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:gravity="center">
            <TextView
                    style="@style/cuName"
                    android:text="@string/_500_cu"
                    android:layout_width="wrap_content"
                    android:id="@+id/textViewCU500" app:layout_constraintStart_toStartOf="parent"
            />
            <EditText
                    style="@style/cuEdit"
                    android:id="@+id/editCU500"/>
            <TextView
                    style="@style/cuValue"
                    android:id="@+id/valueCU500"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:gravity="center">
            <TextView
                    style="@style/cuName"
                    android:text="@string/_200_cu"
                    android:layout_width="wrap_content"

                    android:id="@+id/textViewCU200" app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                    style="@style/cuEdit"

                    android:id="@+id/editCU200"/>
            <TextView
                    style="@style/cuValue"
                    android:id="@+id/valueCU200"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:gravity="center">
            <TextView
                    style="@style/cuName"
                    android:text="@string/_100_cu"
                    android:layout_width="wrap_content"

                    android:id="@+id/textViewCU100" app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                    style="@style/cuEdit"
                    android:id="@+id/editCU100"/>
            <TextView
                    style="@style/cuValue"
                    android:id="@+id/valueCU100"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:gravity="center">
            <TextView
                    style="@style/cuName"
                    android:text="@string/_50_cu"
                    android:layout_width="wrap_content"

                    android:id="@+id/textViewCU50" app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                    style="@style/cuEdit"
                    android:id="@+id/editCU50"/>
            <TextView
                    style="@style/cuValue"
                    android:id="@+id/valueCU50"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:gravity="center">
            <TextView
                    style="@style/cuName"
                    android:text="@string/_20_cu"
                    android:layout_width="wrap_content"

                    android:id="@+id/textViewCU20" app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                    style="@style/cuEdit"
                    android:id="@+id/editCU20"/>
            <TextView
                    style="@style/cuValue"
                    android:id="@+id/valueCU20"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:gravity="center">
            <TextView
                    style="@style/cuName"
                    android:text="@string/_10_cu"
                    android:layout_width="wrap_content"

                    android:id="@+id/textViewCU10" app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                    style="@style/cuEdit"
                    android:id="@+id/editCU10"/>
            <TextView
                    style="@style/cuValue"
                    android:id="@+id/valueCU10"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:gravity="center">
            <TextView
                    style="@style/cuName"
                    android:text="@string/_5_cu"
                    android:layout_width="wrap_content"

                    android:id="@+id/textViewCU5" app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                    style="@style/cuEdit"
                    android:id="@+id/editCU5"/>
            <TextView
                    style="@style/cuValue"
                    android:id="@+id/valueCU5"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:gravity="center">
            <TextView
                    style="@style/cuName"
                    android:text="@string/_2_cu"
                    android:layout_width="wrap_content"

                    android:id="@+id/textViewCU2" app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                    style="@style/cuEdit"
                    android:id="@+id/editCU2"/>
            <TextView
                    style="@style/cuValue"
                    android:id="@+id/valueCU2"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:gravity="center">
            <TextView
                    style="@style/cuName"
                    android:text="@string/_1_cu"
                    android:layout_width="wrap_content"

                    android:id="@+id/textViewCU1" app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                    style="@style/cuEdit"
                    android:id="@+id/editCU1"/>
            <TextView
                    style="@style/cuValue"
                    android:id="@+id/valueCU1"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </TableRow>
    </TableLayout>
</ScrollView>